freest/test/prog/Invalid/SessionPatterns/AtInAndVar/AtInAndVar.fst
module AtInAndVar where

f : *?Int -> *?Int
f c@(?1 ; _) = c
f c = c
